<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="@string/test_your_mettle"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Enter Name Here"
            android:inputType=""
            android:labelFor="@+id/edit_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_1"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/question_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Answer here"
            android:inputType=""
            android:labelFor="@+id/edit_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_2"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group_question_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_2a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/question2A" />

            <RadioButton
                android:id="@+id/question_2b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/question2B" />

            <RadioButton
                android:id="@+id/question_2c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/question2C" />

            <RadioButton
                android:id="@+id/question_2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/question2D" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/question_3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/question3A" />

        <CheckBox
            android:id="@+id/question_3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/question3B" />

        <CheckBox
            android:id="@+id/question_3c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/question3C" />

        <CheckBox
            android:id="@+id/question_3d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp"
            android:text="@string/question3D" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_4"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/question_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:hint="Answer here"
            android:inputType="" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_5"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/radio_group_question_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question_5a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/question5A" />

            <RadioButton
                android:id="@+id/question_5b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/question5B" />

            <RadioButton
                android:id="@+id/question_5c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:text="@string/question5C" />

            <RadioButton
                android:id="@+id/question_5d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="2dp"
                android:text="@string/question5D" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/question_6"
            android:textSize="16sp" />


        <CheckBox
            android:id="@+id/question_6a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/question6A" />

        <CheckBox
            android:id="@+id/question_6b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/question6B" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="submit"
            android:text="@string/submit" />

        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:onClick="reset"
            android:text="@string/reset"
            android:textColor="#ff0033"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>